--- a/ATM-keypad-api/src/main/resources/application.properties
+++ b/ATM-keypad-api/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 
+spring.datasource.url=jdbc:mariadb://localhost:3306/ATMcode?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# Configuração de informações
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
+# ENDPOINTS WEB CONFIGURATION
+management.endpoints.web.exposure.include=*
+#Shutdown
+management.endpoint.shutdown.enabled=true
+endpoints.shutdown.enable=true
+# HEALTH ENDPOINT
+management.endpoint.health.show-details=always
