--- a/ATM-keypad-api/pom.xml
+++ b/ATM-keypad-api/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>br.com.cagekeeper</groupId>
 	<artifactId>cagekeeper</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cagekeeper</name>
-	<description>Projeto PAC</description>
+	<name>ATM</name>
+	<description>Projeto algoritmos avançado</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -28,14 +28,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate.validator</groupId>
-			<artifactId>hibernate-validator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
