--- a/ATM-keypad-api/pom.xml
+++ b/ATM-keypad-api/pom.xml
@@ -8,8 +8,8 @@
 		<version>3.1.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.cagekeeper</groupId>
-	<artifactId>cagekeeper</artifactId>
+	<groupId>br.edu.catolicasc.algoritmosAvancados.atmkeypadapi</groupId>
+	<artifactId>atmkeypadapi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ATM</name>
 	<description>Projeto algoritmos avançado</description>
@@ -28,6 +28,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
